Bouncing balls added

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body id="body">
-  <div id="container">
-  </div>
+  <canvas id="playingField"></canvas>
   <script type="text/javascript" src="./js/main.js"></script>
 </body>
 
