--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body id="body">
   <canvas id="playingField"></canvas>
+  <section id="finishScreen"></section>
   <script type="text/javascript" src="./js/main.js"></script>
 </body>
 
