--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    
+    <meta charset="utf-8">
 
-<head>
-  <meta charset="utf-8">
-  <title>Starter template typescript</title>
-  <link rel="stylesheet" href="./assets/css/normalize.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
-</head>
+    <title>Starter template typescript</title>
 
-<body id="body">
-  <canvas id="playingField"></canvas>
-  <section id="finishScreen"></section>
-  <script type="text/javascript" src="./js/main.js"></script>
-</body>
+    <!-- CSS -->
+    <link rel="stylesheet" href="./assets/css/normalize.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    
+    <!-- FONTS --> 
+    <link href="https://fonts.googleapis.com/css?family=Lato:700,900" rel="stylesheet">
+
+  </head>
+
+  <body id="body">
+    <canvas id="playingField"></canvas>
+    <section id="finishScreen"></section>
+    <script type="text/javascript" src="./js/main.js"></script>
+  </body>
 
 </html>
