--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
     <meta charset="utf-8">
 
-    <title>Starter template typescript</title>
+    <title>Rosinante</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/normalize.css">
@@ -12,6 +12,14 @@
     
     <!-- FONTS --> 
     <link href="https://fonts.googleapis.com/css?family=Lato:700,900" rel="stylesheet">
+
+    <!-- FAVICON -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/icons/favicon-16x16.png">
+    <link rel="manifest" href="./assets/icons/manifest.json">
+    <link rel="mask-icon" href="./assets/icons/safari-pinned-tab.svg" color="#912f40">
+    <meta name="theme-color" content="#ffffff">
 
   </head>
 
