--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
     <meta charset="utf-8">
 
-    <title>Rosinante</title>
+    <title>Rocinante</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/normalize.css">
